<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
    android:padding="@dimen/spacing1"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/normalAppbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

      <TextView
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:id="@+id/cityName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/backBtn"
        app:layout_constraintRight_toLeftOf="@id/searchBtn"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

      <TextView
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:id="@+id/date"
        app:layout_constraintTop_toBottomOf="@id/cityName"
        app:layout_constraintLeft_toRightOf="@id/backBtn"
        app:layout_constraintRight_toLeftOf="@id/searchBtn"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_search_input"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/ic_baseline_search_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
      android:id="@+id/searchBarContainer"
      android:visibility="gone"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <EditText
        android:id="@+id/searchInput"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/search_location"
        android:inputType="text"
        android:autofillHints="" />

      <com.google.android.material.button.MaterialButton
        android:layout_marginLeft="@dimen/spacing2"
        android:id="@+id/closeSearchBtn"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_baseline_close_24"
        app:cornerRadius="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    </LinearLayout>
  </LinearLayout>
</merge>