<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <com.farhanhp.weatherapp.components.CityDetailAppBar
    android:background="@color/white"
    android:id="@+id/cityDetailComponent_appbar"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

  <ScrollView
    app:layout_constraintTop_toBottomOf="@id/cityDetailComponent_appbar"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <LinearLayout
      android:padding="@dimen/spacing1"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/temperature"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:fontFamily="@font/poppins_medium"
          android:textColor="@color/black"
          android:textSize="64sp"
          android:textStyle="bold" />

        <ImageView
          android:id="@+id/weatherConditionImage"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:contentDescription="@string/weather_condition" />
      </LinearLayout>

      <TextView
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/weatherConditionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <TextView
        android:id="@+id/lastUpdated"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <LinearLayout
        android:layout_marginTop="@dimen/spacing1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Wind Speed"
          android:id="@+id/windKph"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Pressure"
          android:id="@+id/pressureMb"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Precipitation"
          android:id="@+id/precipMm"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>
      </LinearLayout>

      <LinearLayout
        android:layout_marginBottom="@dimen/spacing2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Humidity"
          android:id="@+id/humidity"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Cloud"
          android:id="@+id/cloud"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Wind Gust"
          android:id="@+id/gustKph"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>
      </LinearLayout>

      <!--Air Quality Index Section-->
      <TextView
        android:layout_marginTop="@dimen/spacing2"
        android:layout_marginBottom="@dimen/spacing1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/air_quality_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="Defra Index"
          android:id="@+id/defraIndex"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="EPA Index"
          android:id="@+id/epaIndex"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>
      </LinearLayout>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="CO"
          android:id="@+id/co"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="O3"
          android:id="@+id/o3"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="NO2"
          android:id="@+id/no2"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>
      </LinearLayout>

      <LinearLayout
        android:layout_marginBottom="@dimen/spacing2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="SO2"
          android:id="@+id/so2"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="PM2.5"
          android:id="@+id/pm25"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>

        <com.farhanhp.weatherapp.components.WeatherPropertyCard
          app:title="PM10"
          android:id="@+id/pm10"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"/>
      </LinearLayout>
      <!--Air Quality Index Section End-->

      <!-- History -->
      <TextView
        android:layout_marginTop="@dimen/spacing2"
        android:layout_marginBottom="@dimen/spacing1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <LinearLayout
        android:layout_marginBottom="@dimen/spacing2"
        android:id="@+id/hourlyWeatherHistoryCardContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <!-- History End-->

      <com.google.android.material.button.MaterialButton
        android:id="@+id/weatherForecastBtn"
        app:cornerRadius="@dimen/spacing2"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/spacing2"
        android:text="@string/see_weather_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>